Fixed sidebar not scrolling vertically for overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,7 @@ html, body {
     z-index: 1000;
     display: block;
     background-color: #2c3e50;
+    overflow-y: scroll;
 }
 
 #sidebar .collapse.in {
@@ -64,12 +65,6 @@ html, body {
     margin-top: 0;
     margin-bottom: 0;
 }
-
-/*.navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  vertical-align: top;
-}*/
 
 .navbar-default .navbar-nav>li>a {
     color: #73879C;
